# omni

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  clone_repos.sh  omni-requirements.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
creds_manager/: .testr.conf  README.md  build-rpm.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
creds_manager/credsmgr/: __init__.py  context.py  credsmgr.conf  exception.py  policy.py  service.py  test.py  utils.py
creds_manager/credsmgr/api/: app.py  router.py
creds_manager/credsmgr/api/controllers/: api_version_request.py  versioned_method.py  wsgi.py
creds_manager/credsmgr/api/controllers/v1/: credentials.py  microversion.py  router.py
creds_manager/credsmgr/api/middleware/: context.py
creds_manager/credsmgr/cmd/: api.py  manage.py  service.py
creds_manager/credsmgr/conf/: __init__.py  default.py  paths.py
creds_manager/credsmgr/db/: api.py  migration.py
creds_manager/credsmgr/db/sqlalchemy/: api.py  migration.py  models.py
creds_manager/credsmgr/db/sqlalchemy/migrate_repo/: README.md  manage.py  migrate.cfg
creds_manager/credsmgr/db/sqlalchemy/migrate_repo/versions/: 001_credsmgr_init.py
creds_manager/credsmgr/tests/: utils.py
creds_manager/credsmgr/tests/unit/api/: api_base.py  fakes.py
creds_manager/credsmgr/tests/unit/api/controllers/v1/: test_credentials.py
creds_manager/credsmgr/tests/unit/db/: test_db.py
creds_manager/credsmgr/tests/unit/db/sqlalchemy/: test_db_api.py
creds_manager/credsmgr/wsgi/: common.py
creds_manager/etc/credsmgr/: api-paste.ini  credsmgr.conf
creds_manager/etc/logrotate.d/: credsmanager
creds_manager/etc/rsyslog.d/: credsmgr.conf
creds_manager/tools/pkg/: openstack-credsmgr.service  pf9-credsmgr.spec  rpmsign.expect  sign_packages.sh
credsmgrclient/: client.py  encrypt.py
credsmgrclient/common/: constants.py  exceptions.py  http.py  utils.py
credsmgrclient/v1/: __init__.py  (+2 more)
devstack/: README.md  README.rst  plugin.sh  settings
glance/: README.md  create-glance-images-gce.py  gceutils.py
hacking/: checks.py
neutron/: requirements-gce.txt
nova/: create-nova-flavors-gce.py  gceutils.py  requirements-gce.txt
omnitests/: test_hacking.py
scripts/: create-glance-images-aws.py  create-glance-images-gce.py  create-nova-flavors-gce.py
(+130 files in other folders)
