[metadata]
name = omni
summary = Omni Project
description-file = README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
