[metadata]
name = credsmgr
summary = OpenStack Credentials Manager for Omni
description-file =
    README.md
author = Platform9
author-email = info@platform9.com
home-page = http://www.platform9.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    credsmgr

[entry_points]
oslo.config.opts =
    credsmgr = credsmgr.opts:list_opts
console_scripts =
    credsmgr-api = credsmgr.cmd.api:main
    credsmgr-manage = credsmgr.cmd.manage:main

credsmgr.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = credsmgr/locale
domain = credsmgr credsmgr-log-error credsmgr-log-info credsmgr-log-warning

[update_catalog]
domain = credsmgr
output_dir = credsmgr/locale
input_file = credsmgr/locale/credsmgr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = credsmgr/locale/credsmgr.pot
